src/pages/process/style.css
* {
    /* outline: 1px solid red; */
}

.bold {
    font-weight: bold;
}

:root {
    --hex-width: 1000px;
    --hex-bw: 1000;

    --vc-width: 1200px;
    --vc-bw: 1200;

    --graph-width: 1200px;
    --graph-bw: 1200;

    --pyramid-width: 1200px;
    --pyramid-bw: 1200;

    --scale-width: 1000px;
    --scale-bw: 1000;

    --columns-width: 1000px;
    --columns-bw: 1000;


    --light-gray: rgb(220, 220, 220);
}

/* general common styles for all sections */
.header {
    margin-bottom: 20px;
}

/* common styles for figures (charts/diagrams) that are just text over images */
.fig-container {
    margin: auto;
    position: relative;
    /* text horizontal align */
    text-align: center;
    container-type: inline-size;
    /* overflow-x: scroll; */
}

.fig-img {
    /* display: block just to get rid of bottom margin */
    display: block;
    object-fit: cover;
    overflow: hidden;
    user-select: none;
    position: absolute;
}

.fig-container .part {
    font-size: calc(22 * 100cqw / var(--base-width));
    position: absolute;
}



#opener {
    /* top/bottom, left/right */
    padding: 75px 100px;
    background-color: var(--bg1);
}



#details {
    /* top/bottom, left/right */
    padding: 75px 100px;
    background-color: var(--bg0);
}



#method-grid {
    /* top, right, bottom, left */
    padding: 75px 50px 75px 50px;

    background-color: var(--bg1);
}
#method-grid .header {
    color: var(--txt0);
    text-align: center;
}
#method-grid .grid {
    display: grid;
    /* border: 1px solid var(--sec3-grid-color); */
    border-radius: 2px;
    /* if you want to have different sized columns, then use the commented att */
    /* grid-template-columns: 10fr 10fr 10fr 10fr 10fr 10fr 10fr; */
    grid-template-columns: 2fr repeat(6, 10fr);
    grid-template-rows: repeat(7, 1fr);

    overflow-x: scroll;
}
#method-grid .cell {
    padding: 6px;
    display: grid;
    border: 1px solid var(--txt0);
}
#method-grid .blank2 {
    grid-column: 1 / 3;
}
#method-grid .blank1 {
    grid-column: 1 / 2;
}
#method-grid .label {
    grid-column: 3 / 8;
    justify-content: center;
}
#method-grid .descript {
    background-color: var(--sec3-descript-col-color);
}
#method-grid .detail {
    background-color: var(--sec3-detail-col-color);
}



#hex-flowchart {
    /* top/bottom, left/right */
    padding: 75px 100px;
    background-color: var(--bg0);
    --base-width: var(--hex-bw);
}
#hex-flowchart .header {}
/* container */
#hex-flowchart .fig-container {
    margin: auto;
    width: var(--hex-width);
    aspect-ratio: 2477 / 1500;
    --base-width: var(--hex-bw);
}
#hex-flowchart .fig-container .fig-img {
    width: var(--hex-width);
}
#hex-flowchart .fig-container .part {
    /* text vertical align */
    align-content: center;
}
/* center */
#hex-flowchart .fig-container .center {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 25%;
    height: 20%;
    font-weight: bold;
    font-size: calc(30 * 100cqw / var(--base-width));
}
/* right */
#hex-flowchart .fig-container .top-right {
    transform: translateY(-50%);
    top: 15%;
    right: 8%;
    width: 20%;
    height: 15%;
    text-align: left;
}
#hex-flowchart .fig-container .mid-right {
    transform: translateY(-50%);
    top: 51%;
    right: 0%;
    width: 17%;
    height: 15%;
    text-align: left;
}
#hex-flowchart .fig-container .bot-right {
    transform: translateY(-50%);
    bottom: -1%;
    right: 7%;
    width: 20%;
    height: 15%;
    text-align: left;
}
/* left */
#hex-flowchart .fig-container .top-left {
    transform: translateY(-50%);
    top: 15%;
    left: 8%;
    width: 20%;
    height: 15%;
    text-align: right;
}
#hex-flowchart .fig-container .mid-left {
    transform: translateY(-50%);
    top: 51%;
    left: 0%;
    width: 17%;
    height: 15%;
    text-align: right;
}
#hex-flowchart .fig-container .bot-left {
    transform: translateY(-50%);
    bottom: -1%;
    left: 7%;
    width: 21%;
    height: 15%;
    text-align: right;
}
#hex-flowchart .extra {
    margin: auto;
    margin-top: 2%;
    width: 50%;
    /* height: 40%; */
    text-align: left;
    padding: calc(10 * 100cqw / var(--base-width)) calc(6 * 100cqw / var(--base-width));
    border: 2px solid rgb(194, 171, 150);
    border-radius: calc(6 * 100cqw / var(--base-width));
    font-size: calc(16 * 100cqw / var(--base-width));
}



#vc-analogy {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#vc-analogy .header {}
/* container */
#vc-analogy .fig-container {
    width: var(--vc-width);
    aspect-ratio: 3 / 1;
    --base-width: var(--vc-bw);
}
#vc-analogy .fig-container .fig-img {
    width: var(--vc-width);
}
#vc-analogy .fig-container .part {
    /* text vertical align */
    /* align-content: center; */
}
/* parts */
#vc-analogy .fig-container .p1 {
    transform: translate(-50%, -50%);
    bottom: -10%;
    left: 9%;
    width: 25%;
    height: 30%;
}
#vc-analogy .fig-container .p2 {
    transform: translate(-50%, -50%);
    bottom: -10%;
    left: 36%;
    width: 25%;
    height: 30%;
}
#vc-analogy .fig-container .p3 {
    transform: translate(-50%, -50%);
    bottom: -10%;
    left: 63%;
    width: 25%;
    height: 30%;
}
#vc-analogy .fig-container .p4 {
    transform: translate(-50%, -50%);
    bottom: -10%;
    left: 90%;
    width: 25%;
    height: 30%;
}



#four-methods {
    /* top/bottom, left/right */
    padding: 75px 100px;
}
#four-methods .header {}
#four-methods .quarters {
    display: grid;
    grid-template-rows: 1fr 1fr;
    grid-template-columns: 1fr 1fr;
}
#four-methods .quarter {
    display: flex;
    justify-content: space-evenly;
}
#four-methods .q1 {
    border-right: 1px solid var(--light-gray);
    border-bottom: 1px solid var(--light-gray);
}
#four-methods .q2 {
    border-left: 1px solid var(--light-gray);
    border-bottom: 1px solid var(--light-gray);
}
#four-methods .q3 {
    border-right: 1px solid var(--light-gray);
    border-top: 1px solid var(--light-gray);
}
/* ... */

